# Homegreen_st_published

./: .gitignore  accessing_data_for_analysis.md  analysis_data_plan.md  analysis_front_end_plan.md  analysis_init_instructions.md  analytics_ready_data_instructions.md  app.py  data_create.py  db_cloud_plan_part_3.md  fixes_to_check.md  frontend_ready_data_instructions.md  generate_cache.py  main.py  pyproject.toml  requirements.txt
analytics/data/frontend_cache/: comparison_matrices.json  flavor_hierarchies.json  metadata.json  overview_data.json  rankings_data.json
analytics/db_access/: coffee_data_extractor.py  debug_flavors.py  test_extraction.py
analytics/frontend/: cached_data_loader.py  data_cache_generator.py
analytics/processing/: hierarchical_analysis.py  integrated_analysis.py  statistical_analysis.py  test_analytics.py  tfidf_analysis.py
frontend/: __init__.py
frontend/data/: __init__.py  database_loader.py
frontend/database/: __init__.py  supabase_client.py
frontend/similarity/: __init__.py  pgvector_similarity.py
page_apps/: about_page.py  analytics_page.py  fresh_dashboard_page.py  full_data_set_page.py  individual_coffee_page.py  landing.py
page_apps/modules/: similarity_db_tools.py
page_apps/modules/assets/text/: about_data_collection.md
pages/: fresh_dashboard_page.py  full_data_set_page.py  individual_coffee_page.py
pages/modules/assets/data/: most_recent_perm_db_with_predictions.csv
